--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "anymap"
-version = "1.0.0-beta.2"
-authors = ["Chris Morgan <rust@chrismorgan.info>"]
+name = "anymap3"
+version = "1.0.0"
+authors = ["Olivier 'reivilibre' (fork maintainer) <contact@librepush.net>", "Chris Morgan (original author) <rust@chrismorgan.info>"]
 edition = "2018"
 rust-version = "1.36"
 description = "A safe and convenient store for one value of each type"
-repository = "https://github.com/chris-morgan/anymap"
+repository = "https://github.com/reivilibre/anymap3"
 keywords = ["container", "any", "map"]
 categories = ["rust-patterns", "data-structures", "no-std"]
 license = "BlueOak-1.0.0 OR MIT OR Apache-2.0"
